[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/dreamscape/MainMenu/NewGame.gd" type="Script" id=1]
[ext_resource path="res://src/dreamscape/MainMenu/Archetype.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/StartingCards.tscn" type="PackedScene" id=3]

[node name="NewGame" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1693.0
margin_bottom = 893.0

[node name="Title" type="Label" parent="VBC"]
margin_right = 1686.0
margin_bottom = 14.0
text = "New Game"
align = 1

[node name="MarginUp" type="Control" parent="VBC"]
margin_top = 18.0
margin_right = 1686.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 100 )

[node name="DeckChooseLabel" type="Label" parent="VBC"]
margin_top = 122.0
margin_right = 1686.0
margin_bottom = 136.0
text = "Choose Deck Archetypes"
align = 1

[node name="CC" type="CenterContainer" parent="VBC"]
margin_top = 140.0
margin_right = 1686.0
margin_bottom = 548.0
rect_min_size = Vector2( 0, 400 )

[node name="Choices" type="HBoxContainer" parent="VBC/CC"]
margin_left = 273.0
margin_right = 1413.0
margin_bottom = 408.0
custom_constants/separation = 20

[node name="Ego" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_right = 270.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Ego"]
margin_right = 270.0
margin_bottom = 14.0
text = "Ego"
align = 1

[node name="Ego" type="Button" parent="VBC/CC/Choices/Ego"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Ego"

[node name="Disposition" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 290.0
margin_right = 560.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Disposition"]
margin_right = 270.0
margin_bottom = 14.0
text = "Disposition"
align = 1

[node name="Disposition" type="Button" parent="VBC/CC/Choices/Disposition"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Ego"

[node name="Instrument" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 580.0
margin_right = 850.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Instrument"]
margin_right = 270.0
margin_bottom = 14.0
text = "Instrument"
align = 1

[node name="Instrument" type="Button" parent="VBC/CC/Choices/Instrument"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Instrument"

[node name="Injustice" type="VBoxContainer" parent="VBC/CC/Choices"]
margin_left = 870.0
margin_right = 1140.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="VBC/CC/Choices/Injustice"]
margin_right = 270.0
margin_bottom = 14.0
text = "Injustice"
align = 1

[node name="Injustice" type="Button" parent="VBC/CC/Choices/Injustice"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 408.0
rect_min_size = Vector2( 270, 390 )
text = "Choose Injustice"

[node name="MarginDown" type="Control" parent="VBC"]
margin_top = 552.0
margin_right = 1686.0
margin_bottom = 652.0
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlButtons" type="CenterContainer" parent="VBC"]
margin_top = 656.0
margin_right = 1686.0
margin_bottom = 846.0

[node name="VBC" type="VBoxContainer" parent="VBC/ControlButtons"]
margin_left = 643.0
margin_right = 1043.0
margin_bottom = 190.0
custom_constants/separation = 20

[node name="StartingCards" type="Button" parent="VBC/ControlButtons/VBC"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 50 )
disabled = true
text = "See Starting Cards"

[node name="Start" type="Button" parent="VBC/ControlButtons/VBC"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 50 )
disabled = true
text = "Start Game"

[node name="Back" type="Button" parent="VBC/ControlButtons/VBC"]
margin_top = 140.0
margin_right = 400.0
margin_bottom = 190.0
rect_min_size = Vector2( 400, 50 )
text = "Back"

[node name="ChoicePopup" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1693.0
margin_bottom = 893.0

[node name="CC" type="CenterContainer" parent="ChoicePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="ChoicePopup/CC"]
margin_left = 439.0
margin_top = 104.0
margin_right = 1239.0
margin_bottom = 774.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseLabel" type="Label" parent="ChoicePopup/CC/VBC"]
margin_right = 800.0
margin_bottom = 14.0
text = "Choose Type"
align = 1

[node name="CC" type="CenterContainer" parent="ChoicePopup/CC/VBC"]
margin_top = 18.0
margin_right = 800.0
margin_bottom = 408.0

[node name="ChoiceContainer" type="GridContainer" parent="ChoicePopup/CC/VBC/CC"]
margin_left = 265.0
margin_right = 535.0
margin_bottom = 390.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 5

[node name="Archetype" parent="ChoicePopup/CC/VBC/CC/ChoiceContainer" instance=ExtResource( 2 )]

[node name="StartingCardsLabel" type="Label" parent="ChoicePopup/CC/VBC"]
margin_top = 412.0
margin_right = 800.0
margin_bottom = 426.0
text = "Starting Cards"
align = 1

[node name="StartginCardsDisplay" parent="ChoicePopup/CC/VBC" instance=ExtResource( 3 )]
margin_top = 430.0
margin_right = 800.0
margin_bottom = 670.0
rect_min_size = Vector2( 800, 240 )

[node name="StartingCardsPopup" type="PopupPanel" parent="."]
visible = true
margin_left = 7.0
margin_top = 7.0
margin_right = 1693.0
margin_bottom = 893.0

[node name="StartingCards" parent="StartingCardsPopup" instance=ExtResource( 3 )]

[connection signal="pressed" from="VBC/ControlButtons/VBC/StartingCards" to="." method="_on_StartingCards_pressed"]
[connection signal="pressed" from="VBC/ControlButtons/VBC/Start" to="." method="_on_Start_pressed"]
